# python-project-template

./: .actrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: python_ci.yml  python_cicd.yml
src/python_project_template/: __init__.py
test/: test_hello.py
